--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.0.2",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "classnames": "2.3.1",
     "date-fns": "2.28.0",
+    "framer-motion": "^6.3.3",
     "next": "latest",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
   },
   "devDependencies": {
     "autoprefixer": "10.4.2",
