--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "framer-motion": "^6.3.3",
     "next": "latest",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.35",
