--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "autoprefixer": "10.4.2",
+    "eslint": "^8.16.0",
     "postcss": "8.4.5",
     "tailwindcss": "^3.0.15",
     "typescript": "^4.6.4"
