--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "yarn eslint --color --fix ."
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.0",
@@ -23,6 +24,7 @@
     "@types/react": "^18.0.9",
     "autoprefixer": "10.4.2",
     "eslint": "^8.16.0",
+    "eslint-config-next": "^12.1.6",
     "postcss": "8.4.5",
     "tailwindcss": "^3.0.15",
     "typescript": "^4.6.4"
