--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.10",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "autoprefixer": "10.4.2",
@@ -27,6 +28,6 @@
     "eslint-config-next": "^12.1.6",
     "postcss": "8.4.5",
     "tailwindcss": "^3.0.15",
-    "typescript": "^4.6.4"
+    "typescript": "^4.7.2"
   }
 }
