--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "yarn eslint --color --fix ."
@@ -14,6 +14,7 @@
     "classnames": "2.3.1",
     "date-fns": "2.28.0",
     "framer-motion": "^6.3.3",
+    "jsdom": "^19.0.0",
     "next": "latest",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
