--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "next": "latest",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@types/gtag.js": "^0.0.10",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
+    "@types/react-syntax-highlighter": "^15.5.2",
     "autoprefixer": "10.4.2",
     "eslint": "^8.16.0",
     "eslint-config-next": "^12.1.6",
