--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dev": "next dev",
     "dev:debug": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "yarn eslint --color --fix ."
   },
@@ -17,6 +18,7 @@
     "framer-motion": "^6.3.11",
     "jsdom": "^20.0.0",
     "next": "latest",
+    "next-sitemap": "^3.1.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
