--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@chakra-ui/react": "^2.2.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@fontsource/barlow": "^4.5.7",
+    "@fontsource/poppins": "^4.5.8",
     "classnames": "2.3.1",
     "date-fns": "2.28.0",
     "framer-motion": "^6.3.11",
