--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^6.3.11",
     "jsdom": "^20.0.0",
     "next": "latest",
+    "next-seo": "^5.5.0",
     "next-sitemap": "^3.1.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
