--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "date-fns": "2.28.0",
     "framer-motion": "^6.3.11",
     "jsdom": "^20.0.0",
-    "next": "latest",
+    "next": "^12.2.4",
     "next-seo": "^5.5.0",
     "next-sitemap": "^3.1.10",
     "react": "^18.2.0",
