seo: canonical urls

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,8 @@
     "titleBar.activeBackground": "#fb7530",
     "titleBar.activeForeground": "#15202b",
     "titleBar.inactiveBackground": "#fb753099",
-    "titleBar.inactiveForeground": "#15202b99"
+    "titleBar.inactiveForeground": "#15202b99",
+    "commandCenter.border": "#15202b99"
   },
   "peacock.color": "#fb7530"
 }
