feat: upgrade next, add posthog, change to pnpm

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,5 +1,4 @@
-WORDPRESS_API_URL=
-
-# Only required if you want to enable preview mode
-# WORDPRESS_AUTH_REFRESH_TOKEN=
-# WORDPRESS_PREVIEW_SECRET=
+NEXT_PUBLIC_SITE_BASE_URL="http://localhost:3000"
+NEXT_PUBLIC_CLOUDINARY_BASE_URL=""
+NEXT_PUBLIC_POSTHOG_KEY=<ph_project_api_key>
+NEXT_PUBLIC_POSTHOG_HOST=<ph_client_api_host>
