--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "date-fns": "2.28.0",
     "framer-motion": "^6.3.11",
     "jsdom": "^20.0.0",
-    "next": "^12.2.4",
+    "next": "^12.3.4",
     "next-seo": "^5.5.0",
     "next-sitemap": "^3.1.10",
+    "posthog-js": "^1.128.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
