--- a/package.json
+++ b/package.json
@@ -9,32 +9,32 @@
     "lint": "yarn eslint --color --fix ."
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.0.2",
-    "@chakra-ui/react": "^2.2.1",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@fontsource/barlow": "^4.5.7",
-    "@fontsource/poppins": "^4.5.8",
-    "classnames": "2.3.1",
-    "date-fns": "2.28.0",
-    "framer-motion": "^6.3.11",
-    "jsdom": "^20.0.0",
-    "next": "^12.3.4",
-    "next-seo": "^5.5.0",
-    "next-sitemap": "^3.1.10",
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/barlow": "^5.0.13",
+    "@fontsource/poppins": "^5.0.14",
+    "classnames": "2.5.1",
+    "date-fns": "3.6.0",
+    "framer-motion": "^11.1.7",
+    "jsdom": "^24.0.0",
+    "next": "^14.2.2",
+    "next-seo": "^6.5.0",
+    "next-sitemap": "^4.2.3",
     "posthog-js": "^1.128.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
+    "react-icons": "^5.1.0",
     "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
-    "@types/gtag.js": "^0.0.10",
-    "@types/node": "^18.0.0",
-    "@types/react": "^18.0.14",
-    "@types/react-syntax-highlighter": "^15.5.2",
-    "eslint": "^8.18.0",
-    "eslint-config-next": "^12.1.6",
-    "typescript": "^4.7.4"
+    "@types/gtag.js": "^0.0.19",
+    "@types/node": "20.12.7",
+    "@types/react": "^18.2.79",
+    "@types/react-syntax-highlighter": "^15.5.11",
+    "eslint": "^9.1.1",
+    "eslint-config-next": "^14.2.2",
+    "typescript": "^5.4.5"
   }
 }
