feat: MDX and chakra font config for app router

--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@emotion/styled": "^11.11.5",
     "@fontsource/barlow": "^5.0.13",
     "@fontsource/poppins": "^5.0.14",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.2.3",
+    "@types/mdx": "^2.0.13",
     "classnames": "2.5.1",
     "date-fns": "3.6.0",
     "framer-motion": "^11.1.7",
