--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,7 @@
     "baseUrl": ".",
     "target": "es5",
     "downlevelIteration": true,
-    "lib": [
-      "dom",
-      "es5",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "es5", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -26,15 +21,11 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "paths": {
+      "@/*": ["./*"]
+    }
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "exclude": ["node_modules"]
 }
