--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "classnames": "2.5.1",
     "date-fns": "3.6.0",
     "framer-motion": "^11.1.7",
+    "globby": "^14.0.1",
     "jsdom": "^24.0.0",
     "next": "^14.2.2",
     "next-seo": "^6.5.0",
@@ -37,7 +38,10 @@
     "react-icons": "^5.1.0",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-highlight": "^7.0.0",
-    "remark-gfm": "^4.0.0"
+    "remark-frontmatter": "^5.0.0",
+    "remark-gfm": "^4.0.0",
+    "to-vfile": "^8.0.0",
+    "vfile-matter": "^5.0.0"
   },
   "devDependencies": {
     "@types/gtag.js": "^0.0.19",
