--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "globby": "^14.0.1",
     "jsdom": "^24.0.0",
     "next": "^14.2.2",
+    "next-mdx-remote": "^4.4.1",
     "next-seo": "^6.5.0",
     "next-sitemap": "^4.2.3",
     "posthog-js": "^1.128.3",
