chore: cleanup eslint config

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "next build",
     "postbuild": "next-sitemap --config next-sitemap.config.js",
     "start": "next start",
-    "lint": "yarn eslint --color --fix ."
+    "lint": "next lint"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
@@ -49,7 +49,6 @@
     "@types/node": "20.12.7",
     "@types/react": "^18.2.79",
     "@types/react-syntax-highlighter": "^15.5.11",
-    "eslint": "^9.1.1",
     "eslint-config-next": "^14.2.2",
     "typescript": "^5.4.5"
   }
