--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.2.3",
+    "@next/third-parties": "^14.2.3",
     "@types/mdx": "^2.0.13",
     "classnames": "2.5.1",
     "date-fns": "3.6.0",
