--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@next/mdx": "^14.2.3",
     "@next/third-parties": "^14.2.3",
     "@types/mdx": "^2.0.13",
+    "class-variance-authority": "^0.7.0",
     "classnames": "2.5.1",
+    "clsx": "^2.1.1",
     "date-fns": "3.6.0",
     "framer-motion": "^11.1.7",
     "globby": "^14.0.1",
     "jsdom": "^24.0.0",
+    "lucide-react": "^0.381.0",
     "next": "^14.2.2",
     "next-mdx-remote": "^4.4.1",
     "next-seo": "^6.5.0",
@@ -42,6 +45,8 @@
     "rehype-highlight": "^7.0.0",
     "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "to-vfile": "^8.0.0",
     "vfile-matter": "^5.0.0"
   },
@@ -50,7 +55,10 @@
     "@types/node": "20.12.7",
     "@types/react": "^18.2.79",
     "@types/react-syntax-highlighter": "^15.5.11",
+    "autoprefixer": "^10.4.19",
     "eslint-config-next": "^14.2.2",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   }
 }
