--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.2.3",
     "@next/third-parties": "^14.2.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.0",
     "classnames": "2.5.1",
