--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@next/mdx": "^14.2.3",
     "@next/third-parties": "^14.2.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-table": "^8.17.3",
     "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.0",
     "classnames": "2.5.1",
