--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next-mdx-remote": "^4.4.1",
     "next-seo": "^6.5.0",
     "next-sitemap": "^4.2.3",
+    "next-themes": "^0.3.0",
     "posthog-js": "^1.131.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
