--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
     "rehype-highlight": "^7.0.0",
     "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.0",
+    "sharp": "^0.33.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "to-vfile": "^8.0.0",
-    "vfile-matter": "^5.0.0"
+    "vfile-matter": "^5.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/gtag.js": "^0.0.19",
