--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "eslint-config-next": "^14.2.2",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
+    "tsx": "^4.16.2",
     "typescript": "^5.4.5"
   }
 }
