chore: upgrade posthog

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "next-seo": "^6.5.0",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
-    "posthog-js": "^1.140.1",
+    "posthog-js": "^1.154.2",
+    "posthog-node": "^5.7.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.1.0",
