--- a/package.json
+++ b/package.json
@@ -55,14 +55,14 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/gtag.js": "^0.0.19",
     "@types/node": "20.12.7",
     "@types/react": "^18.2.79",
     "@types/react-syntax-highlighter": "^15.5.11",
-    "autoprefixer": "^10.4.19",
     "eslint-config-next": "^15.5.0",
     "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.6",
+    "tailwindcss": "^4.1.12",
     "typescript": "^5.4.5"
   }
 }
