--- a/package.json
+++ b/package.json
@@ -16,12 +16,6 @@
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.2.3",
     "@next/third-parties": "^14.2.3",
-    "@radix-ui/react-accordion": "^1.2.0",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.1.0",
     "@tanstack/react-table": "^8.17.3",
     "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.0",
@@ -37,9 +31,10 @@
     "next-mdx-remote": "^4.4.1",
     "next-seo": "^6.5.0",
     "next-sitemap": "^4.2.3",
-    "next-themes": "^0.3.0",
+    "next-themes": "^0.4.6",
     "posthog-js": "^1.154.2",
     "posthog-node": "^5.7.0",
+    "radix-ui": "^1.4.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.1.0",
@@ -63,6 +58,7 @@
     "eslint-config-next": "^15.5.0",
     "postcss": "^8.4.39",
     "tailwindcss": "^4.1.12",
+    "tw-animate-css": "^1.3.7",
     "typescript": "^5.4.5"
   }
 }
