--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   "dependencies": {
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
-    "@next/mdx": "^14.2.3",
-    "@next/third-parties": "^14.2.3",
+    "@next/mdx": "^16.0.1",
+    "@next/third-parties": "^16.0.1",
     "@tanstack/react-table": "^8.17.3",
     "@types/mdx": "^2.0.13",
+    "@types/react-dom": "^19.2.2",
     "class-variance-authority": "^0.7.0",
     "classnames": "2.5.1",
     "clsx": "^2.1.1",
@@ -26,17 +27,17 @@
     "framer-motion": "^11.1.7",
     "globby": "^14.0.1",
     "jsdom": "^24.0.0",
-    "lucide-react": "^0.381.0",
-    "next": "^15.5.0",
-    "next-mdx-remote": "^4.4.1",
+    "lucide-react": "^0.552.0",
+    "next": "^16.0.1",
+    "next-mdx-remote": "^5.0.0",
     "next-seo": "^6.5.0",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "posthog-js": "^1.154.2",
     "posthog-node": "^5.7.0",
     "radix-ui": "^1.4.3",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-icons": "^5.1.0",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-highlight": "^7.0.0",
@@ -53,9 +54,9 @@
     "@tailwindcss/postcss": "^4.1.12",
     "@types/gtag.js": "^0.0.19",
     "@types/node": "20.12.7",
-    "@types/react": "^18.2.79",
+    "@types/react": "^19.2.2",
     "@types/react-syntax-highlighter": "^15.5.11",
-    "eslint-config-next": "^15.5.0",
+    "eslint-config-next": "^16.0.1",
     "postcss": "^8.4.39",
     "tailwindcss": "^4.1.12",
     "tw-animate-css": "^1.3.7",
